--- a/style.css
+++ b/style.css
@@ -1,5 +1,113 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 /* common style  */
 body{
     font-family: 'Poppins', sans-serif;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container{
+    margin-left: 120px;
+}
+.top-section{
+    display: flex;
+    margin-top: 126px;
+}
+.top-section img{
+    width: 100%;
+    margin-left: 50px;
+}
+.top-sec-info{
+    color: #3A3A3A;
+    width: 50%;
+}
+.top-sec-info p{
+    font-size: 16px;
+    
+}
+.header{
+    font-size: 24px;
+    color: #3A3A3A;
+}
+.top-info-intro{
+    font-size: 52px;
+}
+.button{
+    background-color: #E02C6D;
+    padding: 10px 30px;
+    border-radius: 44px;
+    text-decoration: none;
+    color: aliceblue;
+}
+
+/* product */
+
+   
+.products{
+    
+    font-family: 'Poppins', sans-serif;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+}
+.product{
+    width: 329px;
+    height: 580px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+    
+}
+
+.product-head{
+    color: #3A3A3A;
+    font-size: 28px;
+    text-align: center;
+
+}
+.product img{
+    Width  :300px;
+    Height :256px;
+    border-radius: 5px;
+    margin-left: 14px;
+}
+.product-name{
+    font-size: 32px;
+}
+.product-info{
+    margin-left: 14px;
+    margin-top: 20px;
+}
+.product-price{
+    color: #000000DE;
+    font-size: 24px;
+    margin: 0px;
+}
+.fa-star{
+    color: #FB8200;
+
+    
+}
+.fa-star-last{
+    margin-right: 8px;
+}
+.delivery-info{
+    color: #787885;
+    font-size: 14px;
+    
+
+}
+.next-page{
+    text-decoration: none;
+    color: #E02C6DDE;
+    padding-top: 50px;
+
+}
+footer{
+    color: whitesmoke;
+    text-align: center;
+    background-color: #0A0826;
+    width: 1440px;
+    height: 239px;
 }
